Fixing the edit pop-up visibility

--- a/app/assets/stylesheets/modules-popovers-edit.css.scss
+++ b/app/assets/stylesheets/modules-popovers-edit.css.scss
@@ -5,7 +5,7 @@
 }
 .popup {
   position: absolute;
-  z-index: 1;
+  z-index: 100;
   width: 276px;
   border: 1px solid #ccc;
   text-shadow: none;
